--- a/College-portal-System/Views/TeachingAssistant/EditTask.cshtml
+++ b/College-portal-System/Views/TeachingAssistant/EditTask.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
-    ViewData["Title"] = "Assignments";
+    ViewData["Title"] = "Edit Task";
     Layout = "~/Views/Shared/_LayoutTeachingAssistant.cshtml";
 }
 <div class="pagetitle">
-    <h1>Edit Assignment</h1>
+    <h1>Edit Task</h1>
     <nav>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">Home</li>
-            <li class="breadcrumb-item active">Edit Assignment</li>
+            <li class="breadcrumb-item active">Edit Task</li>
         </ol>
     </nav>
 </div>
@@ -15,7 +15,7 @@
 <section class="section">
     <div class="row">
         <div class="col-12">
-            <h4 class="text-left">Edit Assignment Details</h4>
+            <h4 class="text-left">Edit Task Details</h4>
             <br>
             <br>
         </div>
@@ -52,7 +52,7 @@
                         </div>
                         <br>
                         <br>
-                        <button type="submit" class="submit-btn btn btn-success">Update Assignment</button>
+                        <button type="submit" class="submit-btn btn btn-success">Update Task</button>
                         <button type="submit" class="submit-btn btn btn-danger">Delete</button>
 
                     </form>
