--- a/College-portal-System/Views/Admin/_AdminHeaderPartialView.cshtml
+++ b/College-portal-System/Views/Admin/_AdminHeaderPartialView.cshtml
@@ -6,9 +6,8 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-        <a href="index.html" class="logo d-flex align-items-center">
-            <img src="assets/img/logo.png" alt="">
-            <span class="d-none d-lg-block">NiceAdmin</span>
+        <a asp-action="Index" class="logo d-flex align-items-center">
+            <span class="d-none d-lg-block">FCAI</span>
         </a>
         <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
