--- a/College-portal-System/Views/Shared/_LayoutAdmin.cshtml
+++ b/College-portal-System/Views/Shared/_LayoutAdmin.cshtml
@@ -12,6 +12,8 @@
     <!-- Vendor CSS Files -->
     <link href="/AdminAssets/vendor/bootstrap/css/bootstrap.min.css"
           rel="stylesheet" />
+    <link href="/TAAssets/img/favicon.png" rel="icon" />
+
     <link href="/AdminAssets/vendor/bootstrap-icons/bootstrap-icons.css"
           rel="stylesheet" />
     <link href="/AdminAssets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
@@ -19,7 +21,25 @@
     <link href="/AdminAssets/vendor/quill/quill.bubble.css" rel="stylesheet" />
     <link href="/AdminAssets/vendor/remixicon/remixicon.css" rel="stylesheet" />
     <link href="/AdminAssets/vendor/simple-datatables/style.css" rel="stylesheet" />
+    @*
+        TA CSS
+    *@
+    <link href="/TAAssets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
+    <link href="https://fonts.gstatic.com" rel="preconnect" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+          rel="stylesheet" />
+    <link href="/TAAssets/vendor/bootstrap/css/bootstrap.min.css"
+          rel="stylesheet" />
+    <link href="/TAAssets/vendor/bootstrap-icons/bootstrap-icons.css"
+          rel="stylesheet" />
+    <link href="/TAAssets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+    <link href="/TAAssets/vendor/quill/quill.snow.css" rel="stylesheet" />
+    <link href="/TAAssets/vendor/quill/quill.bubble.css" rel="stylesheet" />
+    <link href="/TAAssets/vendor/remixicon/remixicon.css" rel="stylesheet" />
+    <link href="/TAAssets/vendor/simple-datatables/style.css" rel="stylesheet" />
+    <link href="/TAAssets/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/TAAssets/css/teaching_assistant_style.css">
     <!-- Template Main CSS File -->
     <link href="/AdminAssets/css/style.css" rel="stylesheet" />
 </head>
@@ -67,6 +87,6 @@
         <polyline id="SvgjsPolyline1003" points="0,0"></polyline>
         <path id="SvgjsPath1004" d="M0 0 "></path>
     </svg>
-    @await RenderSectionAsync("Scripts", required: false)
+    @* @await RenderSectionAsync("Scripts", required: false) *@
 </body>
 </html>
