Working with Admin module

--- a/College-portal-System/Views/_ViewImports.cshtml
+++ b/College-portal-System/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using College_portal_System
 @using College_portal_System.Models
 @using College_portal_System.Models.TAViewModels
+@using College_portal_System.Models.AdminViewModel
 @using DataAccessLayer.Entities
 @using College_portal_System.Utilities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
