push student repo

--- a/College-portal-System/Views/Student/GetTakenCourses.cshtml
+++ b/College-portal-System/Views/Student/GetTakenCourses.cshtml
@@ -34,7 +34,7 @@
                     }
                     else
                     {
-                        if (Model.Gender == false)
+                        if (Model.Gender == "Male")
                         {
                             <img src="~/StudentAssets/img/blank male profile pic.png" alt="Profile" class="rounded-circle" style="max-width: 150px; max-height: 150px;">
                         }
@@ -165,9 +165,11 @@
                         
                     </tr>
                 }
-                
+               
             </tbody>
         </table>
+    </div>
+</div>
 
 
 
