--- a/College-portal-System/Views/Student/Index.cshtml
+++ b/College-portal-System/Views/Student/Index.cshtml
@@ -1,48 +1,25 @@
-<<<<<<< HEAD
-﻿@* @model Student
+@using College_portal_System.Models.StudentViewModels
+@using BusinessLogicLayer.DTO
+@model UserViewModel
 @{
-=======
-﻿@{
->>>>>>> d6417c3a3b5580ef2f739281e31af2b3ad626827
     ViewData["Title"] = "Index";
-    ViewData["id"] = Model.StudentId;
-    ViewData["hello"] = "Hello";
+    ViewData["firstname"] = Model.FirstName;
+    ViewData["lastname"] = Model.LastName;
+    ViewData["image"] = Model.Picture;
+    ViewData["gender"] = Model.Gender;
+    ViewData["id"] = Model.NationalId;
     Layout = "~/Views/Shared/_LayoutStudent.cshtml";
 }
 
 
 <div class="pagetitle">
-    <h1>Blank Page</h1>
+    <h1>Home Page</h1>
     <nav>
         <ol class="breadcrumb">
-             <li class="breadcrumb-item">Home</li>
-=            <li class="breadcrumb-item active">Blank</li>
+            <li class="breadcrumb-item">Home</li>
         </ol>
     </nav>
 </div><!-- End Page Title -->
 
 <section class="section">
-    <div class="row">
-        <div class="col-lg-6">
-
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Example Card</h5>
-                    <p>This is an examle page with no contrnt. You can use it as a starter for your custom pages.</p>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="col-lg-6">
-
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Example Card</h5>
-                    <p>This is an examle page with no contrnt. You can use it as a starter for your custom pages.</p>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</section> *@
+</section>
