--- a/College-portal-System/Views/Student/RegisterDepartment.cshtml
+++ b/College-portal-System/Views/Student/RegisterDepartment.cshtml
@@ -6,7 +6,7 @@
     ViewData["firstname"] = "Yassin";
     ViewData["lastname"] = "Ahmed";
     ViewData["image"] = null;
-    ViewData["gender"] = false;
+    ViewData["gender"] = "Male";
     ViewData["id"] ="30308132100798";
 }
 
