--- a/College-portal-System/Views/Admin/Index.cshtml
+++ b/College-portal-System/Views/Admin/Index.cshtml
@@ -40,7 +40,7 @@
             </a>
         </div>
         <div class="col-lg-4 col-12">
-            <a asp-controller="Admin" asp-action="EditStudent">
+            <a asp-controller="Admin" asp-action="Departments">
                 <!-- Update route parameters as needed -->
                 <div class="course-card">
                     <div class="text-center">
