--- a/College-portal-System/Views/Shared/_LayoutAdmin.cshtml
+++ b/College-portal-System/Views/Shared/_LayoutAdmin.cshtml
@@ -40,6 +40,7 @@
     <link href="/TAAssets/vendor/simple-datatables/style.css" rel="stylesheet" />
     <link href="/TAAssets/css/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="/TAAssets/css/teaching_assistant_style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Template Main CSS File -->
     <link href="/AdminAssets/css/style.css" rel="stylesheet" />
 </head>
@@ -51,6 +52,8 @@
         @RenderBody()
     </main>
     <partial name="_AdminFooterPartialView"></partial>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 
 
