--- a/College-portal-System/Views/Admin/_AdminAsidePartialView.cshtml
+++ b/College-portal-System/Views/Admin/_AdminAsidePartialView.cshtml
@@ -17,13 +17,13 @@
 
         <li class="nav-item">
             <a asp-action="AddStudent" class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse">
-                <i class="bi bi-menu-button-wide"></i><span>Add Student</span></i>
+                <i class="bi bi-menu-button-wide"><span>Add Student</span></i>
             </a>
         </li><!-- End Components Nav -->
 
         <li class="nav-item">
-            <a asp-action="AddCourse" class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse">
-                <i class="bi bi-journal-text"></i><span>Add Course</span><i class="bi bi-chevron-down ms-auto"></i>
+            <a asp-action="Students" class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse">
+                <i class="bi bi-journal-text"></i><span>Students</span><i class="bi bi-chevron-down ms-auto"></i>
             </a>
         </li><!-- End Forms Nav -->
 
@@ -33,12 +33,12 @@
             </a>
             <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                 <li>
-                    <a href="tables-general.html">
+                    <a asp-action="ShowCourses">
                         <i class="bi bi-circle"></i><span>Show Courses</span>
                     </a>
                 </li>
                 <li>
-                    <a href="tables-data.html">
+                    <a asp-action="AddCourse">
                         <i class="bi bi-circle"></i><span>Add Course</span>
                     </a>
                 </li>
@@ -46,52 +46,11 @@
         </li><!-- End Tables Nav -->
 
         <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
-                <i class="bi bi-bar-chart"></i><span>Charts</span><i class="bi bi-chevron-down ms-auto"></i>
+            <a asp-action="Departments" class="nav-link collapsed" >
+                <i class="bi bi-building"></i>
+                <span>Departments</span>
             </a>
-            <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                <li>
-                    <a href="charts-chartjs.html">
-                        <i class="bi bi-circle"></i><span>Chart.js</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="charts-apexcharts.html">
-                        <i class="bi bi-circle"></i><span>ApexCharts</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="charts-echarts.html">
-                        <i class="bi bi-circle"></i><span>ECharts</span>
-                    </a>
-                </li>
-            </ul>
-        </li><!-- End Charts Nav -->
-
-        <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#icons-nav" data-bs-toggle="collapse" href="#">
-                <i class="bi bi-gem"></i><span>Icons</span><i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="icons-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                <li>
-                    <a href="icons-bootstrap.html">
-                        <i class="bi bi-circle"></i><span>Bootstrap Icons</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="icons-remix.html">
-                        <i class="bi bi-circle"></i><span>Remix Icons</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="icons-boxicons.html">
-                        <i class="bi bi-circle"></i><span>Boxicons</span>
-                    </a>
-                </li>
-            </ul>
-        </li><!-- End Icons Nav -->
-
-
+        </li>
 
         <li class="nav-item">
             <a class="nav-link collapsed" href="users-profile.html">
