--- a/College-portal-System/Views/TeachingAssistant/UpdateProfile.cshtml
+++ b/College-portal-System/Views/TeachingAssistant/UpdateProfile.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using College_portal_System.ViewModels.TAViewModels
+@{
     ViewData["title"] = "Update Profile";
     Layout = "~/Views/Shared/_LayoutTeachingAssistant.cshtml";
 }
