--- a/College-portal-System/Views/TeachingAssistant/CreateTask.cshtml
+++ b/College-portal-System/Views/TeachingAssistant/CreateTask.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using College_portal_System.ViewModels.TAViewModels
+
 @{
     ViewData["Title"] = "My Tasks";
     Layout = "~/Views/Shared/_LayoutTeachingAssistant.cshtml";
