--- a/College-portal-System/Views/Student/ViewRegisteredCourses.cshtml
+++ b/College-portal-System/Views/Student/ViewRegisteredCourses.cshtml
@@ -1,7 +1,7 @@
 ﻿@using College_portal_System.Models.StudentViewModels
 @model List<AvailableCoursesViewModel>
 @{
-    ViewData["Title"] = "RegisterCourses";
+    ViewData["Title"] = "ViewRegisteredCourses";
     Layout = "~/Views/Shared/_LayoutStudent.cshtml";
     ViewData["firstname"] = "Yassin";
     ViewData["lastname"] = "Ahmed";
@@ -16,16 +16,11 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item">Home</li>
             <li class="breadcrumb-item">Courses</li>
-            <li class="breadcrumb-item active">Register Courses</li>
+            <li class="breadcrumb-item active">View Courses</li>
         </ol>
     </nav>
 </div>
-@if (TempData["success"] != null)
-{
-    <div class="text-danger">
-        @TempData["success"]
-    </div>
-}
+
 <div class="card">
     <div class="card-body">
         <!-- Bordered Table -->
@@ -42,13 +37,6 @@
                     <tr>
                         <th scope="row">@item.Name</th>
                         <td>@item.Code</td>
-                        <td>
-                            <form asp-controller="Student" asp-action="RegisterCourses" asp-route-StudentiD="@ViewData["id"]" asp-route-CourseId="@item.CourseID" method="post">
-                                <div class="text-center">
-                                    <button type="submit" class="btn btn-primary">Register</button>
-                                </div>
-                            </form>
-                        </td>
                     </tr>
                 }
 
