Major: creating student creation user

--- a/College-portal-System/Views/Admin/Index.cshtml
+++ b/College-portal-System/Views/Admin/Index.cshtml
@@ -16,7 +16,7 @@
     <div class="row">
 
         <div class="col-lg-4 col-12">
-            <a asp-controller="Admin" asp-action="AddStudent">
+            <a asp-controller="Admin" asp-action="StudentIndex">
                 <!-- Update route parameters as needed -->
                 <div class="course-card">
                     <div class="text-center">
