--- a/College-portal-System/Views/Shared/_LayoutAdmin.cshtml
+++ b/College-portal-System/Views/Shared/_LayoutAdmin.cshtml
@@ -8,7 +8,7 @@
     <link href="https://fonts.gstatic.com" rel="preconnect" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
           rel="stylesheet" />
-
+    
     <!-- Vendor CSS Files -->
     <link href="/AdminAssets/vendor/bootstrap/css/bootstrap.min.css"
           rel="stylesheet" />
@@ -21,9 +21,6 @@
     <link href="/AdminAssets/vendor/quill/quill.bubble.css" rel="stylesheet" />
     <link href="/AdminAssets/vendor/remixicon/remixicon.css" rel="stylesheet" />
     <link href="/AdminAssets/vendor/simple-datatables/style.css" rel="stylesheet" />
-    @*
-        TA CSS
-    *@
     <link href="/TAAssets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <link href="https://fonts.gstatic.com" rel="preconnect" />
@@ -43,6 +40,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Template Main CSS File -->
     <link href="/AdminAssets/css/style.css" rel="stylesheet" />
+    @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
 
@@ -55,10 +53,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
-
-
-
-
 
     <script src="/AdminAssets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="/AdminAssets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
