--- a/College-portal-System/Views/Professor/MaterialDetails.cshtml
+++ b/College-portal-System/Views/Professor/MaterialDetails.cshtml
@@ -1,16 +1,16 @@
 ﻿@{
-    ViewData["Title"] = "Hello";
+    ViewData["hello"] = "Hello";
     Layout = "~/Views/Shared/_LayoutProfessor.cshtml";
 }
 <div class="pagetitle">
     <h1>Dashboard / Add Materials</h1>
     <nav>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item">Home></li>
-            <li class="breadcrumb-item active">Welcome Hazem</li>
+            <li class="breadcrumb-item">Home</li>
+            <li class="breadcrumb-item active">Add Materials</li>
         </ol>
     </nav>
-</div><!-- End Page Courses Title -->
+</div><!-- End Page Title -->
 
 <section class="section">
     <div class="row">
