--- a/College-portal-System/Views/Student/RegisterCourses.cshtml
+++ b/College-portal-System/Views/Student/RegisterCourses.cshtml
@@ -11,7 +11,7 @@
 }
 
 <div class="pagetitle">
-    <h1>Profile</h1>
+    <h1>Courses</h1>
     <nav>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">Home</li>
@@ -22,7 +22,7 @@
 </div>
 @if (TempData["success"] != null)
 {
-    <div class="text-danger">
+    <div class="alert alert-info">
         @TempData["success"]
     </div>
 }
