--- a/College-portal-System/Views/Student/_StudentAsidePartialView.cshtml
+++ b/College-portal-System/Views/Student/_StudentAsidePartialView.cshtml
@@ -83,6 +83,11 @@
         </li><!-- End Icons Nav -->
         <!-- End Icons Nav -->
 
+        <li class="nav-item">
+            <a class="nav-link " asp-controller="Student" asp-action="Profile" asp-route-id="@ViewData["id"]">
+                <i class="bi bi-journal-text"></i><span>Profile</span>
+            </a>
+        </li>
 
     </ul>
 </aside><!-- End Sidebar-->
