--- a/College-portal-System/Views/Student/GetTakenCourses.cshtml
+++ b/College-portal-System/Views/Student/GetTakenCourses.cshtml
@@ -11,7 +11,7 @@
     ViewData["id"] = Model.NationalId;
 }
 <div class="pagetitle">
-    <h1>Profile</h1>
+    <h1>Transcript</h1>
     <nav>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">Home</li>
