--- a/College-portal-System/Views/Student/_StudentHeaderPartialView.cshtml
+++ b/College-portal-System/Views/Student/_StudentHeaderPartialView.cshtml
@@ -8,8 +8,8 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
     <div class="d-flex align-items-center justify-content-between">
         <a asp-controller="Student" asp-action="Index" class="logo d-flex align-items-center">
-            <img src="StudentAssets/img/logo.png" alt="" />
-            <span class="d-none d-lg-block">NiceAdmin</span>
+            @* <img src="StudentAssets/img/logo.png" alt="" /> *@
+            <span class="d-none d-lg-block">FCAI</span>
         </a>
         <i class="bi bi-list toggle-sidebar-btn"></i>
     </div>
@@ -39,139 +39,9 @@
             </li>
             <!-- End Search Icon-->
 
-            <li class="nav-item dropdown">
-                <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-                    <i class="bi bi-bell"></i>
-                    <span class="badge bg-primary badge-number">4</span>
-                </a><!-- End Notification Icon -->
-
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
-                    <li class="dropdown-header">
-                        You have 4 new notifications
-                        <a href="#">
-                            <span class="badge rounded-pill bg-primary p-2 ms-2">View all</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider" />
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-exclamation-circle text-warning"></i>
-                        <div>
-                            <h4>Lorem Ipsum</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>30 min. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider" />
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-x-circle text-danger"></i>
-                        <div>
-                            <h4>Atque rerum nesciunt</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>1 hr. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider" />
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-check-circle text-success"></i>
-                        <div>
-                            <h4>Sit rerum fuga</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>2 hrs. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider" />
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-info-circle text-primary"></i>
-                        <div>
-                            <h4>Dicta reprehenderit</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>4 hrs. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider" />
-                    </li>
-                    <li class="dropdown-footer">
-                        <a href="#">Show all notifications</a>
-                    </li>
-                </ul>
-                <!-- End Notification Dropdown Items -->
-            </li>
+            
             <!-- End Notification Nav -->
             <!-- End Messages Nav -->
-
-            <li class="nav-item dropdown pe-3">
-                <a class="nav-link nav-profile d-flex align-items-center pe-0"
-                   href="#"
-                   data-bs-toggle="dropdown">
-                    @if (ViewData["image"] != null)
-                    {
-                        var base64Image = ImageHelper.GetBase64Image(Model.Picture);
-                        <img src="data:image/jpeg;base64,@base64Image" alt="Profile" class="rounded-circle">
-                    }
-                    else
-                    {
-                        if ((string)ViewData["gender"] == "Male") // Check gender instead of image
-                        {
-                            <img src="~/StudentAssets/img/blank male profile pic.png" alt="Profile" class="rounded-circle">
-                        }
-                        else
-                        {
-                            <img src="~/StudentAssets/img/female blank profile pic.png" alt="Profile" class="rounded-circle">
-                        }
-                    }
-
-                    <span class="d-none d-md-block dropdown-toggle ps-2">@ViewData["firstname"]</span>
-                </a>
-                <!-- End Profile Iamge Icon -->
-
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-                    <li class="dropdown-header">
-                        <h6>@ViewData["firstname"] @ViewData["lastname"]</h6>
-                        <span>Student</span>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider" />
-                    </li>
-
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center"
-                           asp-controller="Student" asp-action="Profile" asp-route-id="@ViewData["id"]">
-                            <i class="bi bi-person"></i>
-                            <span>My Profile</span>
-                        </a>
-                    </li>
-                    
-                    <li>
-                        <hr class="dropdown-divider" />
-                    </li>
-
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="#">
-                            <i class="bi bi-box-arrow-right"></i>
-                            <span>Sign Out</span>
-                        </a>
-                    </li>
-                </ul>
-                <!-- End Profile Dropdown Items -->
-            </li>
-            <!-- End Profile Nav -->
         </ul>
     </nav>
     <!-- End Icons Navigation -->
